--- a/learning-angular/package.json
+++ b/learning-angular/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
+    "gc": "ng generate component",
+    "gd": "ng generate directive",
+    "gp": "ng generate pipe",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
